Finally working again whoowhee

--- a/Pokedex/Pokedex.csproj
+++ b/Pokedex/Pokedex.csproj
@@ -200,7 +200,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51066</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://localhost:44394/pokedex</IISUrl>
+          <IISUrl>http://localhost:8080/pokedex</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
